@@ -38,6 +38,9 @@ gdb_start
 gdb_reinitialize_dir $srcdir/$subdir
 gdb_load ${binfile}
 
+# Skip all tests if Python scripting is not enabled.
+if { [skip_python_tests] } { continue }
+
 if ![runto_main] then {
     fail "Cannot run to main."
     return 0
